// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayImageCard should render a ClayImageCard with actionItems 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
              <title>ellipsis-v</title>
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with classes 1`] = `
<div class="card-type-asset card image-card my-custom-class">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with href 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <a class=" card-title text-truncate" href="#1">My Title</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with icon 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents" focusable="false">
        <title>documents</title>
        <use xlink:href="icons.svg#documents"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with id 1`] = `
<div class="card-type-asset card image-card" id="myId">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with imageAlt 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with imageSrc 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <img alt="" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="thumbnail_coffee.jpg">
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`danger color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-danger">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`info color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-info">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`secondary color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`success color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-success">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`warning color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-warning">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labels with styles mapped with labelStylesMap 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-success">Approved</span>
          <span class="label label-warning">Pending</span>
          <span class="label label-danger">Error</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with one label 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker shape \`circle\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-primary sticker-bottom-left rounded-circle">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker shape \`rounded\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`danger color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-danger sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`dark color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-dark sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`info color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-info sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`light color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-light sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`primary color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`secondary color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-secondary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`success color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-success sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with sticker style \`warning color\` 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first">
    <span class="sticker sticker-warning sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with subtitle 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-subtitle text-truncate">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with two labels 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
          <span class="label label-secondary">Pending</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with two labels with styles 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-warning">Approved</span>
          <span class="label label-danger">Peding</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a disabled ClayImageCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left image-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a selectable ClayImageCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left image-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a selectable ClayImageCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left image-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a selectable ClayImageCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left image-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="checkbox" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a selected ClayImageCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left image-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render the default markup 1`] = `
<div class="card-type-asset card image-card">
  <div class="aspect-ratio card-item-first"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;
